--- a/src/main/webapp/organic/organic.xhtml
+++ b/src/main/webapp/organic/organic.xhtml
@@ -50,13 +50,14 @@
                                 widgetVar="organicButton"
                                 action="#{organicBean.runAnalysis}"
                                 onclick="PF('pbAjaxLong').start();PF('organicButton').disable()"
-                                styleClass="btn btn-primary"/>
+                                styleClass="btn btn-primary"
+                                update=":notifications"/>
                             <br/>
                             <br/>
                             <!--PROGRESS BAR FOR RUN ANALYSIS-->
                             <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{organicBean.progress}"
                                            labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
-                                <p:ajax event="complete" update=":header:messages"/>
+                                <p:ajax event="complete" update=":notifications"/>
                             </p:progressBar>
                         </h:form>
                     </p:panel> 
