--- a/src/main/webapp/import/import_your_data_bulk_text.xhtml
+++ b/src/main/webapp/import/import_your_data_bulk_text.xhtml
@@ -108,7 +108,7 @@
                                         value="#{text['import_data.general.read_data']}"
                                         onclick="PF('pbAjaxLong').start()"
                                         action="#{dataImportBean.readData}"
-                                        update=":header:messages dataTable launch"/>
+                                        update=":notifications dataTable launch"/>
                                     <br/>
                                     <br/>
                                     <!--PROGRESS BAR FOR READ OPERATION-->
@@ -121,7 +121,8 @@
                                         labelTemplate="{value}%"
                                         styleClass="p-mt-3"
                                         global="false"
-                                        interval="500">
+                                        interval="500"
+                                        >
                                     </p:progressBar>
                                 </p:outputPanel>
                             </p:outputPanel>
@@ -136,6 +137,7 @@
                                     onclick="PF('pbAjaxLong').start()"
                                     styleClass="btn btn-primary"
                                     rendered="#{not empty dataImportBean.dataInSheets}"
+                                    update=":notifications"
                                     />
                             </h:form>
                         </p:outputPanel>
