--- a/src/main/webapp/networkconverter/network_format_converter.xhtml
+++ b/src/main/webapp/networkconverter/network_format_converter.xhtml
@@ -47,7 +47,7 @@
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
-                <f:viewParam name="lang" value="#{aclocaleBeananguageTag}" />
+                <f:viewParam name="lang" value="#{localeBean.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
             <script type="text/javascript">
