--- a/src/main/webapp/topics/results.xhtml
+++ b/src/main/webapp/topics/results.xhtml
@@ -46,7 +46,7 @@
             <p:spacer height="10"/>
             <ui:include src="/WEB-INF/includes/call-form.xhtml" />
             <p:spacer height="10"/>
-F            <p:panel header="">
+            <p:panel header="">
                 <h:form target="_blank">
                     <p:commandButton
                         value="#{text['general.verbs.download_results']}"
