--- a/src/main/webapp/gaze/network_builder_tool.xhtml
+++ b/src/main/webapp/gaze/network_builder_tool.xhtml
@@ -49,7 +49,7 @@
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
-                <f:viewParam name="lang" value="#{aclocaleBeananguageTag}" />
+                <f:viewParam name="lang" value="#{localeBean.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
            <p:panel>
