--- a/src/main/webapp/import/import_your_data_network_builder_option_2.xhtml
+++ b/src/main/webapp/import/import_your_data_network_builder_option_2.xhtml
@@ -83,13 +83,13 @@
                                         value="#{text['import_data.general.read_data']}"
                                         onclick="PF('pbAjaxLong').start()"
                                         action="#{dataImportBean.readData}"
-                                        update=":tab"/>
+                                        update=":tab :notifications"/>
                                     <br/>
                                     <br/>
                                     <!--PROGRESS BAR FOR READ OPERATION-->
                                     <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{dataImportBean.progress}" rendered="#{dataImportBean.renderProgressBar}"
                                                    labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
-                                        <p:ajax event="complete" update=":tab"/>
+                                        <p:ajax event="complete" update=":tab :notifications"/>
                                     </p:progressBar>
                                 </p:outputPanel>
                             </p:outputPanel>
