--- a/src/main/webapp/organic/organic_listening_voice_of_customer_tool.xhtml
+++ b/src/main/webapp/organic/organic_listening_voice_of_customer_tool.xhtml
@@ -61,7 +61,7 @@
                 <br/>
                 <p>#{text['general.message.try_it_just_click_on_link']}</p>
                 <span style="overflow-wrap: break-word;">
-                    <a href="#{sessionBean.hostFunctionsAPI()}/api/organicForAText?text-lang=en&amp;text=Buy our product now&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{aclocaleBeananguageTag}" target="_blank">
+                    <a href="#{sessionBean.hostFunctionsAPI()}/api/organicForAText?text-lang=en&amp;text=Buy our product now&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{localeBean.languageTag}" target="_blank">
                         #{sessionBean.hostFunctionsAPI()}
                         <span style="color:blue">
                             /api/organicForAText?
