--- a/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
+++ b/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
@@ -47,7 +47,7 @@
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
-                <f:viewParam name="lang" value="#{aclocaleBeananguageTag}" />
+                <f:viewParam name="lang" value="#{localeBean.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
                 <f:viewAction action="#{dataImportBean.setBulkData(true)}" />
             </f:metadata>
