--- a/src/main/webapp/topics/topics.xhtml
+++ b/src/main/webapp/topics/topics.xhtml
@@ -50,7 +50,7 @@
                             <p:selectOneListbox id="lang" value="#{topicsBean.selectedLanguage}" style="width: 50px !important">
                                 <f:selectItems value="#{topicsBean.available}" var="l"
                                                itemValue="#{l.toLanguageTag()}"
-                                               itemLabel="#{l.getDisplayLanguage(actilocaleBeanrentLocale)}">
+                                               itemLabel="#{l.getDisplayLanguage(localeBean.currentLocale)}">
                                 </f:selectItems>
                                 <p:ajax event="change" process="@this"/>
                             </p:selectOneListbox>
