--- a/src/main/webapp/umigon/sentiment_analysis_tool.xhtml
+++ b/src/main/webapp/umigon/sentiment_analysis_tool.xhtml
@@ -46,7 +46,7 @@
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
-                <f:viewParam name="lang" value="#{aclocaleBeananguageTag}" />
+                <f:viewParam name="lang" value="#{localeBean.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
             <p:panel>
@@ -80,7 +80,7 @@
                 <br/>
                 <p>#{text['general.message.try_it_just_click_on_link']}</p>
                 <span style="overflow-wrap: break-word;">
-                    <a href="#{sessionBean.hostFunctionsAPI()}/api/sentimentForAText?text-lang=en&amp;text=this app is amazing&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{actilocaleBeanguageTag}" target="_blank">
+                    <a href="#{sessionBean.hostFunctionsAPI()}/api/sentimentForAText?text-lang=en&amp;text=this app is amazing&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{localeBean.currentLocale}" target="_blank">
                         #{sessionBean.hostFunctionsAPI()}
                         <span style="color:blue">
                             /api/sentimentForAText?
