added a feature to upload many pdfs at once for the cowo function. This implies have a new web page for that and new classes to handle file upload in a lighter way.

--- a/src/main/webapp/cowo/semantic_networks_tool.xhtml
+++ b/src/main/webapp/cowo/semantic_networks_tool.xhtml
@@ -71,6 +71,12 @@
                     #{text['general.small_words.or']}
                     <br/>
                     <br/>
+                    <p:button value="#{text['general.message.large_pdfs']} 10" icon="pi pi-file-pdf" iconPos="right" outcome="/import/import_your_data_bulk_text_large_pdf_cowo.xhtml?function=cowo&amp;faces-redirect=true" styleClass="btn btn-primary" style="min-width: 15em;"/>
+                    <br/>
+                    <br/>
+                    #{text['general.small_words.or']}
+                    <br/>
+                    <br/>
                     <p:button value="#{text['general.message.text_structured']}" icon="pi pi-file-excel" iconPos="right" outcome="/import/import_your_structured_data.xhtml?function=cowo&amp;faces-redirect=true" styleClass="btn btn-primary" style="min-width: 15em;"/>
                 </div>
             </p:panel>
