continued refactoring the cowo function to allow for a communication between front and API which involves persisting of data to disk as an intermediary

--- a/src/main/webapp/import/import_your_data_bulk_text_large_pdf_cowo.xhtml
+++ b/src/main/webapp/import/import_your_data_bulk_text_large_pdf_cowo.xhtml
@@ -34,7 +34,7 @@
             <f:metadata>
                 <f:viewParam name="function" value="#{sessionBean.function}" />
                 <f:viewAction action="#{largePdfImportBean.setBulkData(true)}" />
-                <f:viewAction action="#{largePdfImportBean.setUniqueId()}" />
+                <f:viewAction action="#{largePdfImportBean.setDataPersistenceUniqueId()}" />
             </f:metadata>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
@@ -72,6 +72,9 @@
                         <br/>
                         <p:outputPanel id="launch">
                             <h:form>
+                                (just for test purpose, ignore this) <p:inputText value="#{largePdfImportBean.dataPersistenceUniqueId}"/>
+                                <br/>
+                                <br/>
                                 <p:commandButton
                                     value="#{text['general.verbs.compute']}"
                                     action="#{largePdfImportBean.gotToFunctionWithDataInBulk}"
