--- a/src/main/webapp/cowo/cowo.xhtml
+++ b/src/main/webapp/cowo/cowo.xhtml
@@ -98,11 +98,11 @@
                                             </div>
                                         </p:divider>
 
-                                        #{text['cowo.cowo.max_size_for_ngrams']} 4
+                                        #{text['cowo.cowo.max_size_for_ngrams']} #{cowoBean.maxNGram}
                                         <br/>
                                         <br/>
-                                        <p:spinner id="spinnerNGRAM" value="#{cowoBean.maxNGram}" min="1" max="4" stepFactor="1"/>
-                                        <p:slider for="spinnerNGRAM" minValue="1" maxValue="4" step="1"/>
+                                        <p:spinner id="spinnerNGRAM" value="#{cowoBean.maxNGram}" min="1" max="#{cowoBean.maxNGram}" stepFactor="1"/>
+                                        <p:slider for="spinnerNGRAM" minValue="1" maxValue="#{cowoBean.maxNGram}" step="1"/>
 
                                         <p:divider align="left">
                                             <div class="p-d-inline-flex p-ai-center">
@@ -186,6 +186,7 @@
                                          action="#{cowoBean.runAnalysis}"
                                          onclick="PF('pbAjaxLong').start();PF('cowoButton').disable()"
                                          styleClass="btn btn-primary"
+                                         disabled="#{cowoBean.runButtonDisabled}"
                                          update=":notifications"/>
                         <br/>
                         <br/>
@@ -195,6 +196,9 @@
                                        labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
                             <p:ajax event="complete" update=":notifications"/>
                         </p:progressBar>
+                        <h:panelGroup id="pollingArea">
+                            <p:poll listener="#{cowoBean.pollingAction}" process="pollingArea" update="pollingArea" interval="2" />
+                        </h:panelGroup>
                     </h:form>
                 </div>
                 <div class="col-3 flex-grow-1">
@@ -204,7 +208,7 @@
                                 <h:column>#{notification.message}</h:column>
                             </h:dataTable>
                             <h:form>
-                                <f:websocket channel="push"  scope="session">
+                                <f:websocket channel="push"  scope="session" onmessage="function(m){console.log(m);}">
                                     <f:ajax event="updateNotifications" render=":notifications" />
                                 </f:websocket>
                             </h:form>
