--- a/src/main/webapp/cowo/cowo.xhtml
+++ b/src/main/webapp/cowo/cowo.xhtml
@@ -208,7 +208,7 @@
                                 <h:column>#{notification.message}</h:column>
                             </h:dataTable>
                             <h:form>
-                                <f:websocket channel="push"  scope="session">
+                                <f:websocket channel="logChannel"  scope="session" onmessage="function(m){console.log(m);}">
                                     <f:ajax event="updateNotifications" render=":scrollPanel :notifications" />
                                 </f:websocket>
                             </h:form>
